// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse-embeds embed at end of textNode 1`] = `
[
  {
    "position": {
      "end": {
        "column": 50,
        "line": 1,
        "offset": 49,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "text",
    "value": "And here is another video: ",
  },
  {
    "position": {
      "end": {
        "column": 50,
        "line": 1,
        "offset": 49,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "image",
    "url": "another_video.mp4",
  },
]
`;

exports[`parse-embeds embed at start of textNode 1`] = `
[
  {
    "position": {
      "end": {
        "column": 41,
        "line": 1,
        "offset": 40,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "image",
    "url": "a_video.mp4",
  },
  {
    "position": {
      "end": {
        "column": 41,
        "line": 1,
        "offset": 40,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "text",
    "value": " and here goes some text",
  },
]
`;

exports[`parse-embeds embed in the middle of a textNode 1`] = `
[
  {
    "position": {
      "end": {
        "column": 58,
        "line": 1,
        "offset": 57,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "text",
    "value": "First some text ",
  },
  {
    "position": {
      "end": {
        "column": 58,
        "line": 1,
        "offset": 57,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "image",
    "url": "then_a_video.mp4",
  },
  {
    "position": {
      "end": {
        "column": 58,
        "line": 1,
        "offset": 57,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "text",
    "value": " then some more text",
  },
]
`;

exports[`parse-embeds embed with size info 1`] = `
[
  {
    "position": {
      "end": {
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "text",
    "value": "Here's an embedded picture: ",
  },
  {
    "position": {
      "end": {
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "image",
    "url": "a_picture.webp|100",
  },
]
`;

exports[`parse-embeds two embeds 1`] = `
[
  {
    "position": {
      "end": {
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "start": {
        "column": 3,
        "line": 1,
        "offset": 72,
      },
    },
    "type": "text",
    "value": "text ",
  },
  {
    "position": {
      "end": {
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "start": {
        "column": 3,
        "line": 1,
        "offset": 72,
      },
    },
    "type": "image",
    "url": "video1.mp4",
  },
  {
    "position": {
      "end": {
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "start": {
        "column": 3,
        "line": 1,
        "offset": 72,
      },
    },
    "type": "text",
    "value": " and ",
  },
  {
    "position": {
      "end": {
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "start": {
        "column": 3,
        "line": 1,
        "offset": 72,
      },
    },
    "type": "image",
    "url": "picture2.webp",
  },
  {
    "position": {
      "end": {
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "start": {
        "column": 3,
        "line": 1,
        "offset": 72,
      },
    },
    "type": "text",
    "value": " the end",
  },
]
`;
